Look recursively for composited scrollers, not just stopping at the enclosing scrolling ancestor.

Bug: 903067
Change-Id: Ice5deb0047862fa72a47e34b1f54f6a6955ae56c
Reviewed-on: https://chromium-review.googlesource.com/c/1336784
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608382}
Former-commit-id: 4fe211a902905e0bace3144d1d8fef13b7395493