third_party/blink/renderer/core/paint/compositing/compositing_requirements_updater.cc
@@ -272,11 +272,18 @@ void CompositingRequirementsUpdater::UpdateRecursive(
   CompositingReasons reasons_to_composite = CompositingReason::kNone;
   CompositingReasons direct_reasons = CompositingReason::kNone;
 
-  bool has_non_root_composited_scrolling_ancestor =
-      layer->AncestorScrollingLayer() &&
-      layer->AncestorScrollingLayer()->GetScrollableArea() &&
-      layer->AncestorScrollingLayer()->NeedsCompositedScrolling() &&
-      !layer->AncestorScrollingLayer()->IsRootLayer();
+  bool has_non_root_composited_scrolling_ancestor = false;
+  const PaintLayer* ancestor_scrolling_layer = layer->AncestorScrollingLayer();
+  while (ancestor_scrolling_layer &&
+         ancestor_scrolling_layer->GetScrollableArea()) {
+    if (ancestor_scrolling_layer->NeedsCompositedScrolling() &&
+        !ancestor_scrolling_layer->IsRootLayer()) {
+      has_non_root_composited_scrolling_ancestor = true;
+      break;
+    }
+    ancestor_scrolling_layer =
+        ancestor_scrolling_layer->AncestorScrollingLayer();
+  }
 
   bool use_clipped_bounding_rect = !has_non_root_composited_scrolling_ancestor;
 
